--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -1,11 +1,11 @@
 ﻿body {
     background-color: #5bc0de;
-    max-width: 600px;
+    max-width: 500px;
     min-height: 400px;
-    min-width: 400px;
-    max-height: 1000px;
-    color: darkslategrey;
-    padding: 2% 0% 0% 0%;
+    min-width: 300px;
+    max-height: 800px;
+    color: dimgrey;
+    margin: 10% 2% 2% 20%;
 }
 
 #input_area {
@@ -22,13 +22,12 @@
 }
 
 form {
-    padding: 5%;
+    margin: 5%;
     max-width: inherit;
-    margin-bottom: auto;
-}
+    margin-bottom: auto}
 
 .list-group {
-    padding: 0% 1% 1% 1%;
+    margin: 5%;
     font-size: 20px;
     margin-bottom: auto;
 }
@@ -43,6 +42,13 @@ input[type="submit"] {
 }
 
 .badge {
-    font-size: 25px;
+    font-size: 20px;
     background-color: inherit;
+}
+.panel-footer{
+ font-size: 20px;
+}
+
+.panel-heading{
+ font-size: 20px;
 }
